	meteorological data set.
* 	Fix treatment of calms in checkPrep, which affected cases with
	zero wind speeds in timeAverage
*	Fix to vector averaging in timeAverage (did not include wind
	speed in calculations). For most data this will make very little
	difference, but will be more important for low wind speeds and/or
	variable wind directions.

Changes in openair 0.4-20 [2011-05-31]
=====================================
* 	Do not remove calms in timeAverage
* 	NEW FUNCTION importSAQN to import data from the Scottish Air
	Quality Network

Changes in openair 0.4-19 [2011-05-19]
=====================================
* 	improved import date.name/time.name handling of spaces
* 	Improved scaling for polarFreq
* 	scatterPlot type = "wd" labels aligned
* 	Added option "statistic" to polarPlot, which can now consider
	"mean", "median", "max" (maximum), "frequency". "stdev"
	(standard deviation) or "weighted.mean" in a similar way to polarFreq
* 	Fixed bad.24 and international tz bugs in import
* 	updated import/import.2

Changes in openair 0.4-18 [2011-05-19]
=====================================
*	Better handling of missing data in smoothTrend/MannKendall;
	particularly when there are mutiple sites
*	Do not run checkPreo on selectByDate because it removes calms
*	Fixed scaling bug in polarFreq when ws.int != 1
*	use avg.time in calcPercentile instead of 'period' to ensure
	consistency with other functions (timePlot would fail with
	percentiles)
*	return NA in aqStats when no data present; previously it tried
	to calculate quanities, returning -Inf etc

Changes in openair 0.4-17 [2011-04-21]
=====================================
*	use readRDS and not .readRDS (caused failure on R Dev)
*	openair now depends on >=R2.13.0
*	NEW FUNCTION sqStats to calculate common and pollutant-specfic
	air quality statsitics by year and site.
*	Changed option data.capture in rollingMean to data.thresh to
	be consistent with other functions.

Changes in openair 0.4-16 [2011-04-13]